--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -2,7 +2,7 @@
   "data": [
     {
       "id": "R_kgDOJWL0-g",
-      "name": "mdp-diffusion",
+      "name": "Kevin Nie",
       "createdAt": "2023-04-13T04:18:19Z",
       "url": "https://github.com/ashutosh1919/mdp-diffusion",
       "description": "Text-guided image editing by manipulating diffusion path without any training.",
