--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -4,7 +4,7 @@
       "id": "R_kgDOJWL0-g",
       "name": "Kevin Nie",
       "createdAt": "2023-04-13T04:18:19Z",
-      "url": "https://github.com/ashutosh1919/mdp-diffusion",
+      "url": "https://www.linkedin.com/in/kevin-nie-b99874286",
       "description": "Text-guided image editing by manipulating diffusion path without any training.",
       "isFork": false,
       "languages": [
