--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -2,10 +2,10 @@
   "data": [
     {
       "id": "R_kgDOJWL0-g",
-      "name": "Kevin Nie",
-      "createdAt": "2023-04-13T04:18:19Z",
+      "name": "Kevin Nie ",
+      "createdAt": "insert personal description here",
       "url": "https://www.linkedin.com/in/kevin-nie-b99874286",
-      "description": "Text-guided image editing by manipulating diffusion path without any training.",
+      "description": "Project Lead, Lead Mechanical Engineer",
       "isFork": false,
       "languages": [
         {
