--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -3,6 +3,7 @@
     {
       "id": "R_kgDOJWL0-g",
       "name": "Kevin Nie ",
+      "poop" = "poopy",
       "createdAt": "insert personal description here",
       "url": "https://www.linkedin.com/in/kevin-nie-b99874286",
       "description": "Project Lead, Lead Mechanical Engineer",
