--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -6,6 +6,7 @@
       "createdAt": "insert personal description here",
       "url": "https://www.linkedin.com/in/kevin-nie-b99874286",
       "description": "Project Lead, Lead Mechanical Engineer",
+      "imageUrl": "path/to/image.jpg"
       "isFork": false,
       "languages": [
         {
