--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -123,7 +123,7 @@
     {
       "id": "new_project_7",
       "name": "Tyler Jung",
-      "createdAt": "2024-11-12",
+      "createdAt": "Howdy, I'm Tyler! I'm a second year studying Physics and Data Science at UC Berkeley. I like skiing, playing violin, and eating. Reach me at tylerjung@berkeley.edu",
       "url": "https://www.linkedin.com/in/tyler-jung-b55a88267/",
       "description": "Software and Website Developer, Electrical Design and Assembly",
       "isFork": false,
