--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -150,7 +150,7 @@
     },
     {
       "id": "new_project_9",
-      "name": "Baovi Ngyuen",
+      "name": "Baovi Nguyen",
       "createdAt": "2024-11-12",
       "url": "https://www.linkedin.com/in/baovi-nguyen-12a53132b/",
       "description": "Software and Website Developer",
@@ -178,7 +178,7 @@
     },
     {
       "id": "new_project_11",
-      "name": "Tayler Ngyuen",
+      "name": "Tayler Nguyen",
       "createdAt": "2024-11-12",
       "url": "https://www.linkedin.com/in/taylerhn/",
       "description": "Electrical and Mechanical Design and Assembly, Software Developer",
