--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -3,7 +3,7 @@
     {
       "id": "R_kgDOJWL0-g",
       "name": "Kevin Nie ",
-      "createdAt": "Hi my name is Kevin! I am a 1st year studying Mechanical Engineering at UC Berkeley. I like dick!",
+      "createdAt": "Hi my name is Kevin! I am a 1st year studying Mechanical Engineering at UC Berkeley. I like reading, playing badminton, and outdoors activities!",
       "url": "https://www.linkedin.com/in/kevin-nie-b99874286",
       "description": "Project Lead",
       "isFork": false,
