--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -25,7 +25,7 @@
     {
       "id": "R_kgDOG_vYHA",
       "name": "Paul Tran",
-      "createdAt": "What's up, I'm Paul! I am a 3rd year studying Mechanical Engineering. I love touching kids!",
+      "createdAt": "Hello, my name is Paul Tran and I’m a junior studying Mechanical Engineering at UC Berkeley! I love sports, physical activities, and making foodie reels and TikToks with my girlfriend. Please reach out through paul.trann@berkeley.edu 😊",
       "url": "https://www.linkedin.com/in/paul-nk-tran/",
       "description": "Mechanical Engineering Lead",
       "isFork": false,
