--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -47,7 +47,7 @@
     {
       "id": "R_kgDOG0_8uQ",
       "name": "Shayna Tran",
-      "createdAt": "2022-02-11T14:50:20Z",
+      "createdAt": "Hi, I’m Shayna! I am a 1st year studying Computer Science. I love drinking boba and exploring new food spots.",
       "url": "https://www.linkedin.com/in/transhayna/",
       "description": "Website Co-Lead, Electrical Assembly",
       "isFork": false,
