--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "baseui": "^9.65.3",
     "caniuse-lite": "^1.0.30001680",
     "chart.js": "^2.9.3",
-    "gh-pages": "^2.1.1",
-    "node-fetch": "^2.6.0",
+    "gh-pages": "^6.2.0",
+    "node-fetch": "^3.3.2",
     "prettier-package-json": "^2.1.3",
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -26,7 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.1.1",
     "styletron-engine-atomic": "^1.4.6",
     "styletron-react": "^5.2.7"
