--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -80,7 +80,7 @@
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
       "name": "Megan Wong",
-      "createdAt": "megan megan megan",
+      "createdAt": "Hi I'm Megan, a first year studying CS. I'm from Chicago and I enjoy travelling, music, and food!",
       "url": "https://www.linkedin.com/in/meganewong/",
       "description": "Software and Website Developer, Mechanical Design and Assembly",
       "isFork": false,
