--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -36,7 +36,7 @@
     {
       "id": "MDEwOlJlcG9zaXRvcnkyNDU0NjcyNzQ=",
       "name": "Jeannine Ruiz",
-      "createdAt": "2020-03-06T16:26:54Z",
+      "createdAt": "Hello! I’m Jeannine a 2nd year EECS student here at Berkeley. I like drinking matcha and collecting smiskis. Feel free to contact me at jeannineruiz@berkeley.edu!",
       "url": "https://www.linkedin.com/in/jeannineruiz/",
       "description": "Software Engineering Lead",
       "isFork": false,
