--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -58,7 +58,7 @@
     {
       "id": "R_kgDOGcPKSQ",
       "name": "Shanta Joshi",
-      "createdAt": "2021-11-26T17:56:07Z",
+      "createdAt": "Hello, I’m Shanta! I’m a 3rd year Bioengineering student minoring in Electrical Engineering & Computer Science. I love hiking, baking, and playing the trumpet! Feel free to reach out to me at shantajoshi@berkeley.edu",
       "url": "https://www.linkedin.com/in/shantajoshi/",
       "description": "Website Co-Lead",
       "isFork": false,
