--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -102,7 +102,7 @@
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
       "name": "Kassidy Brown",
-      "createdAt": "2024-11-12",
+      "createdAt": "Hello! I’m Kassidy a 1st year Bioengineering student at UC Berkeley. I love reading and playing volleyball. Feel free to contact me at kassidybrown@berkeley.edu",
       "url": "https://www.linkedin.com/in/kassidychinbrown/",
       "description": "Electrical and Mechanical Assembly, User Interface Design",
       "isFork": false,
