--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -91,7 +91,7 @@
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
       "name": "Baovi Nguyen",
-      "createdAt": "2024-11-12",
+      "createdAt": "Hi! My name is Baovi and I am a 2nd year studying Computer Science. I like swimming, exploring new places, and arts & crafts. Feel free to contact me at baovi@berkeley.edu!",
       "url": "https://www.linkedin.com/in/baovi-nguyen-12a53132b/",
       "description": "Software and Website Developer",
       "isFork": false,
