--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -114,7 +114,7 @@
     {
       "id": "MDEwOlJlcG9zaXRvcnkzMjU5NDM1MTE=",
       "name": "Tayler Nguyen",
-      "createdAt": "2024-11-12",
+      "createdAt": "Hello hello hello",
       "url": "https://www.linkedin.com/in/taylerhn/",
       "description": "Electrical and Mechanical Design and Assembly, Software Developer",
       "isFork": false,
