--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build
-        run: npm run build
+        run: DISABLE_ESLINT_PLUGIN=true npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
